fixed string jump bug when editing task name

--- a/static/style/scss/desk.scss
+++ b/static/style/scss/desk.scss
@@ -727,6 +727,7 @@ main{
         overflow-y: hidden;
         font-size: 1.1rem;
         padding-left: 2px;
+        padding-bottom: 2px;
         color: $primaryText;
         font-weight: 600;
         cursor: pointer;
